Added Harrel's c-index evaluation

--- a/data_summary_stuff.ipynb
+++ b/data_summary_stuff.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from lifelines.utils import concordance_index"
    ]
   },
   {
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,10 +96,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_preds_0134 = pd.read_csv('/Data/Output/HDFSModel2/2022_02_11_2045_train/test_predictions.csv')\n",
-    "ICC_preds_0134 = test_preds_0134[test_preds_0134['Slice_File_Name'].str.contains(\"ICC\")]\n",
-    "HCC_preds_0134 = test_preds_0134[test_preds_0134['Slice_File_Name'].str.contains(\"hcc\")]\n",
-    "MCRC_preds_0134 = test_preds_0134[test_preds_0134['Slice_File_Name'].str.contains(\"preop\")]\n",
+    "# test_preds_0134 = pd.read_csv('/Data/Output/HDFSModel2/Liver/2022_02_22_2020_train/test_predictions.csv')\n",
+    "# ICC_preds_0134 = test_preds_0134[test_preds_0134['Slice_File_Name'].str.contains(\"ICC\")]\n",
+    "# HCC_preds_0134 = test_preds_0134[test_preds_0134['Slice_File_Name'].str.contains(\"hcc\")]\n",
+    "# MCRC_preds_0134 = test_preds_0134[test_preds_0134['Slice_File_Name'].str.contains(\"preop\")]\n",
     "\n",
     "# ICC_preds_0134.to_csv('/Data/ICC_preds_0134.csv', index=False)\n",
     "# HCC_preds_0134.to_csv('/Data/HCC_preds_0134.csv', index=False)\n",
@@ -107,46 +108,293 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HCC GHCI:  0.6690083474199315\n",
-      "MCRC GHCI:  0.6322053994264344\n",
-      "ICC GHCI:  0.6212810261995416\n",
-      "All n: (1310, 4)\n",
-      "HCC n: (362,)\n",
-      "MCRC n: (358,)\n",
-      "ICC n: (590,)\n"
+      "CNN Prediction Scores\n",
+      "Total GHCI: 0.6151968947291863\n",
+      "HCC GHCI:  0.6388504951018503\n",
+      "MCRC GHCI:  0.5899856957769013\n",
+      "ICC GHCI:  0.6175148642787261\n",
+      "\n",
+      "Total c-index: 0.6684608115939003\n",
+      "HCC C-index: 0.8518832391713748\n",
+      "MCRC C-index: 0.7034913682040711\n",
+      "ICC C-index: 0.5912845198885229\n"
      ]
     }
    ],
    "source": [
-    "test_preds_0134 = pd.read_csv('/Data/Output/HDFSModel2/2022_02_11_2309_train/test_predictions.csv')\n",
+    "test_preds_0134 = pd.read_csv('/Data/Output/HDFSModel2/Tumor/2022_03_24_1623_train/test_predictions.csv')\n",
     "ICC_preds_0134 = test_preds_0134[test_preds_0134['Slice_File_Name'].str.contains(\"ICC\")]\n",
     "HCC_preds_0134 = test_preds_0134[test_preds_0134['Slice_File_Name'].str.contains(\"hcc\")]\n",
     "MCRC_preds_0134 = test_preds_0134[test_preds_0134['Slice_File_Name'].str.contains(\"preop\")]\n",
     "\n",
+    "np_all_preds = np.array(test_preds_0134['Prediction'])\n",
     "np_ICC_preds = np.array(ICC_preds_0134['Prediction'])\n",
     "np_HCC_preds = np.array(HCC_preds_0134['Prediction'])\n",
     "np_MCRC_preds = np.array(MCRC_preds_0134['Prediction'])\n",
     "\n",
+    "all_ghci = gh_c_index(np_all_preds)\n",
     "ICC_ghci = gh_c_index(np_ICC_preds)\n",
     "HCC_ghci = gh_c_index(np_HCC_preds)\n",
     "MCRC_ghci = gh_c_index(np_MCRC_preds)\n",
+    "\n",
+    "print(\"CNN Prediction Scores\")\n",
+    "print(\"Total GHCI:\", all_ghci)\n",
+    "print(\"HCC GHCI: \", HCC_ghci)\n",
+    "print(\"MCRC GHCI: \", MCRC_ghci)\n",
+    "print(\"ICC GHCI: \", ICC_ghci)\n",
+    "\n",
+    "# print(\"All n:\", test_preds_0134.shape)\n",
+    "# print(\"HCC n:\", np_HCC_preds.shape)\n",
+    "# print(\"MCRC n:\", np_MCRC_preds.shape)\n",
+    "# print(\"ICC n:\", np_ICC_preds.shape)\n",
+    "\n",
+    "ICC_cind = concordance_index(np_ICC_preds, np.array(ICC_preds_0134['Time']), np.array(ICC_preds_0134['Event']))\n",
+    "HCC_cind = concordance_index(np_HCC_preds, np.array(HCC_preds_0134['Time']), np.array(HCC_preds_0134['Event']))\n",
+    "MCRC_cind = concordance_index(np_MCRC_preds, np.array(MCRC_preds_0134['Time']), np.array(MCRC_preds_0134['Event']))\n",
+    "total_cind = concordance_index(np_all_preds, np.array(test_preds_0134['Time']), np.array(test_preds_0134['Event']))\n",
+    "\n",
+    "print(\"\\nTotal c-index:\", total_cind)\n",
+    "print(\"HCC C-index:\", HCC_cind)\n",
+    "print(\"MCRC C-index:\", MCRC_cind)\n",
+    "print(\"ICC C-index:\", ICC_cind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RSF Predictions\n",
+      "HCC GHCI:  0.5844042455659736\n",
+      "MCRC GHCI:  0.8843143412281771\n",
+      "ICC GHCI:  0.939271593481019\n",
+      "\n",
+      "HCC C-index: 1.0\n",
+      "MCRC C-index: 0.78125\n",
+      "ICC C-index: 0.7288135593220338\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"RSF Predictions\")\n",
+    "cph_preds = pd.read_excel(\"/Data/FeatureSelection/HCC_MCRC_ICC_HDFS_90_10/RSF_test_liver_tumor_predictions_90_10.xlsx\")\n",
+    "\n",
+    "HCC_cph_preds = cph_preds[cph_preds['Cancer_Type']==0]\n",
+    "MCRC_cph_preds = cph_preds[cph_preds['Cancer_Type']==1]\n",
+    "ICC_cph_preds = cph_preds[cph_preds['Cancer_Type']==2]\n",
+    "\n",
+    "HCC_ghci = gh_c_index(np.array(HCC_cph_preds['Prediction']))\n",
+    "MCRC_ghci = gh_c_index(np.array(MCRC_cph_preds['Prediction']))\n",
+    "ICC_ghci = gh_c_index(np.array(ICC_cph_preds['Prediction']))\n",
+    "\n",
+    "HCC_cind = concordance_index(np.array(HCC_cph_preds['Prediction']), np.array(HCC_cph_preds['HDFS_Time']), np.array(HCC_cph_preds['HDFS_Code']))\n",
+    "MCRC_cind = concordance_index(np.array(MCRC_cph_preds['Prediction']), np.array(MCRC_cph_preds['HDFS_Time']), np.array(MCRC_cph_preds['HDFS_Code']))\n",
+    "ICC_cind = concordance_index(np.array(ICC_cph_preds['Prediction']), np.array(ICC_cph_preds['HDFS_Time']), np.array(ICC_cph_preds['HDFS_Code']))\n",
     "\n",
     "\n",
     "print(\"HCC GHCI: \", HCC_ghci)\n",
     "print(\"MCRC GHCI: \", MCRC_ghci)\n",
     "print(\"ICC GHCI: \", ICC_ghci)\n",
     "\n",
-    "print(\"All n:\", test_preds_0134.shape)\n",
-    "print(\"HCC n:\", np_HCC_preds.shape)\n",
-    "print(\"MCRC n:\", np_MCRC_preds.shape)\n",
-    "print(\"ICC n:\", np_ICC_preds.shape)"
+    "print(\"\\nHCC C-index:\", HCC_cind)\n",
+    "print(\"MCRC C-index:\", MCRC_cind)\n",
+    "print(\"ICC C-index:\", ICC_cind)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ScoutID</th>\n",
+       "      <th>HDFS_Time</th>\n",
+       "      <th>HDFS_Code</th>\n",
+       "      <th>Cancer_Type</th>\n",
+       "      <th>Prediction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>029-hcc</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>279.768000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>038-hcc</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>279.768000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>047-hcc</td>\n",
+       "      <td>133.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>279.768000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>055-hcc</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>279.768000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>064-hcc</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>279.768000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>065-hcc</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>288.968349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>072-hcc</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>277.669836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>107-hcc</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>284.356063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>114-hcc</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>279.768000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>116-hcc</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>279.768000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>117-hcc</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>288.968349</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ScoutID  HDFS_Time  HDFS_Code  Cancer_Type  Prediction\n",
+       "0   029-hcc       18.0          0            0  279.768000\n",
+       "1   038-hcc        8.0          0            0  279.768000\n",
+       "2   047-hcc      133.0          0            0  279.768000\n",
+       "3   055-hcc       11.0          0            0  279.768000\n",
+       "4   064-hcc       50.0          0            0  279.768000\n",
+       "5   065-hcc       18.0          1            0  288.968349\n",
+       "6   072-hcc        5.0          1            0  277.669836\n",
+       "7   107-hcc       15.0          1            0  284.356063\n",
+       "8   114-hcc      120.0          0            0  279.768000\n",
+       "9   116-hcc       98.0          0            0  279.768000\n",
+       "10  117-hcc       30.0          1            0  288.968349"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HCC_cph_preds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Old Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HCC C-index: 0.7611696274170728\n",
+      "MCRC C-index: 0.744561624939823\n",
+      "ICC C-index: 0.6267529665587918\n",
+      "Total c-index: 0.7131675612170434\n"
+     ]
+    }
+   ],
+   "source": [
+    "ICC_cind = concordance_index(np_ICC_preds, np.array(ICC_preds_0134['Time']), np.array(ICC_preds_0134['Event']))\n",
+    "HCC_cind = concordance_index(np_HCC_preds, np.array(HCC_preds_0134['Time']), np.array(HCC_preds_0134['Event']))\n",
+    "MCRC_cind = concordance_index(np_MCRC_preds, np.array(MCRC_preds_0134['Time']), np.array(MCRC_preds_0134['Event']))\n",
+    "total_cind = concordance_index(np.array(test_preds_0134['Prediction']), np.array(test_preds_0134['Time']), np.array(test_preds_0134['Event']))\n",
+    "\n",
+    "print(\"Total c-index:\", total_cind)\n",
+    "print(\"HCC C-index:\", HCC_cind)\n",
+    "print(\"MCRC C-index:\", MCRC_cind)\n",
+    "print(\"ICC C-index:\", ICC_cind)"
    ]
   },
   {
