Changed cox feature select to choose 1 variable for every 10 events

--- a/RandomSurvivalForest/hdfs_random_forest.ipynb
+++ b/RandomSurvivalForest/hdfs_random_forest.ipynb
@@ -47,18 +47,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cox_feature_select(X, t, e):\n",
     "    num_samples = X.shape[0]\n",
+    "    num_events = sum(e)\n",
     "\n",
     "    data_table = X\n",
     "    data_table['Time'] = t\n",
     "    data_table['Event'] = e\n",
     "\n",
-    "    max_num_features = math.ceil(num_samples/10)\n",
+    "    max_num_features = math.ceil(num_events/10)\n",
     "    cph = CoxPHFitter()\n",
     "    cph.fit(data_table, duration_col='Time', event_col='Event')\n",
     "\n",
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
