Correct c-index calculation for all models

--- a/data_summary_stuff.ipynb
+++ b/data_summary_stuff.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -116,20 +116,20 @@
      "output_type": "stream",
      "text": [
       "CNN Prediction Scores\n",
-      "Total GHCI: 0.6151968947291863\n",
-      "HCC GHCI:  0.6388504951018503\n",
-      "MCRC GHCI:  0.5899856957769013\n",
-      "ICC GHCI:  0.6175148642787261\n",
+      "Total GHCI: 0.6299562527886206\n",
+      "HCC GHCI:  0.6628711343869379\n",
+      "MCRC GHCI:  0.5966570741252614\n",
+      "ICC GHCI:  0.6368397784656598\n",
       "\n",
-      "Total c-index: 0.6684608115939003\n",
-      "HCC C-index: 0.8518832391713748\n",
-      "MCRC C-index: 0.7034913682040711\n",
-      "ICC C-index: 0.5912845198885229\n"
+      "Total c-index: 0.6012166208544684\n",
+      "HCC C-index: 0.5953355883923803\n",
+      "MCRC C-index: 0.6613858398400664\n",
+      "ICC C-index: 0.5838111298482294\n"
      ]
     }
    ],
    "source": [
-    "test_preds_0134 = pd.read_csv('/Data/Output/HDFSModel2/Tumor/2022_03_24_1623_train/test_predictions.csv')\n",
+    "test_preds_0134 = pd.read_csv('/Data/Output/HDFSModel2/Tumor/2022_03_28_1903_train/test_predictions.csv')\n",
     "ICC_preds_0134 = test_preds_0134[test_preds_0134['Slice_File_Name'].str.contains(\"ICC\")]\n",
     "HCC_preds_0134 = test_preds_0134[test_preds_0134['Slice_File_Name'].str.contains(\"hcc\")]\n",
     "MCRC_preds_0134 = test_preds_0134[test_preds_0134['Slice_File_Name'].str.contains(\"preop\")]\n",
@@ -155,10 +155,10 @@
     "# print(\"MCRC n:\", np_MCRC_preds.shape)\n",
     "# print(\"ICC n:\", np_ICC_preds.shape)\n",
     "\n",
-    "ICC_cind = concordance_index(np_ICC_preds, np.array(ICC_preds_0134['Time']), np.array(ICC_preds_0134['Event']))\n",
-    "HCC_cind = concordance_index(np_HCC_preds, np.array(HCC_preds_0134['Time']), np.array(HCC_preds_0134['Event']))\n",
-    "MCRC_cind = concordance_index(np_MCRC_preds, np.array(MCRC_preds_0134['Time']), np.array(MCRC_preds_0134['Event']))\n",
-    "total_cind = concordance_index(np_all_preds, np.array(test_preds_0134['Time']), np.array(test_preds_0134['Event']))\n",
+    "ICC_cind = concordance_index(np.array(ICC_preds_0134['Time']), np_ICC_preds, np.array(ICC_preds_0134['Event']))\n",
+    "HCC_cind = concordance_index(np.array(HCC_preds_0134['Time']), np_HCC_preds, np.array(HCC_preds_0134['Event']))\n",
+    "MCRC_cind = concordance_index(np.array(MCRC_preds_0134['Time']), np_MCRC_preds, np.array(MCRC_preds_0134['Event']))\n",
+    "total_cind = concordance_index(np.array(test_preds_0134['Time']), np_all_preds, np.array(test_preds_0134['Event']))\n",
     "\n",
     "print(\"\\nTotal c-index:\", total_cind)\n",
     "print(\"HCC C-index:\", HCC_cind)\n",
@@ -168,27 +168,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RSF Predictions\n",
-      "HCC GHCI:  0.5844042455659736\n",
-      "MCRC GHCI:  0.8843143412281771\n",
-      "ICC GHCI:  0.939271593481019\n",
+      "CPH Predictions\n",
+      "HCC GHCI:  0.6024374932735151\n",
+      "MCRC GHCI:  0.6039925092244356\n",
+      "ICC GHCI:  0.6020811945659768\n",
       "\n",
-      "HCC C-index: 1.0\n",
-      "MCRC C-index: 0.78125\n",
-      "ICC C-index: 0.7288135593220338\n"
+      "HCC C-index: 0.4772727272727273\n",
+      "MCRC C-index: 0.13636363636363635\n",
+      "ICC C-index: 0.5876288659793815\n",
+      "\n",
+      "All c-index: 0.5733882030178327\n"
      ]
     }
    ],
    "source": [
-    "print(\"RSF Predictions\")\n",
-    "cph_preds = pd.read_excel(\"/Data/FeatureSelection/HCC_MCRC_ICC_HDFS_90_10/RSF_test_liver_tumor_predictions_90_10.xlsx\")\n",
+    "print(\"CPH Predictions\")\n",
+    "cph_preds = pd.read_excel(\"/Data/FeatureSelection/HCC_MCRC_ICC_HDFS_90_10/CPH_test_liver_predictions.xlsx\")\n",
     "\n",
     "HCC_cph_preds = cph_preds[cph_preds['Cancer_Type']==0]\n",
     "MCRC_cph_preds = cph_preds[cph_preds['Cancer_Type']==1]\n",
@@ -198,9 +200,10 @@
     "MCRC_ghci = gh_c_index(np.array(MCRC_cph_preds['Prediction']))\n",
     "ICC_ghci = gh_c_index(np.array(ICC_cph_preds['Prediction']))\n",
     "\n",
-    "HCC_cind = concordance_index(np.array(HCC_cph_preds['Prediction']), np.array(HCC_cph_preds['HDFS_Time']), np.array(HCC_cph_preds['HDFS_Code']))\n",
-    "MCRC_cind = concordance_index(np.array(MCRC_cph_preds['Prediction']), np.array(MCRC_cph_preds['HDFS_Time']), np.array(MCRC_cph_preds['HDFS_Code']))\n",
-    "ICC_cind = concordance_index(np.array(ICC_cph_preds['Prediction']), np.array(ICC_cph_preds['HDFS_Time']), np.array(ICC_cph_preds['HDFS_Code']))\n",
+    "# HAVE TO SWITCH THE SIGN ON THE PREDICTIONS FOR CPH MODEL\n",
+    "HCC_cind = concordance_index(np.array(HCC_cph_preds['Prediction']), -np.array(HCC_cph_preds['HDFS_Time']), np.array(HCC_cph_preds['HDFS_Code']))\n",
+    "MCRC_cind = concordance_index(np.array(MCRC_cph_preds['Prediction']), -np.array(MCRC_cph_preds['HDFS_Time']), np.array(MCRC_cph_preds['HDFS_Code']))\n",
+    "ICC_cind = concordance_index(np.array(ICC_cph_preds['Prediction']), -np.array(ICC_cph_preds['HDFS_Time']), np.array(ICC_cph_preds['HDFS_Code']))\n",
     "\n",
     "\n",
     "print(\"HCC GHCI: \", HCC_ghci)\n",
@@ -209,12 +212,85 @@
     "\n",
     "print(\"\\nHCC C-index:\", HCC_cind)\n",
     "print(\"MCRC C-index:\", MCRC_cind)\n",
-    "print(\"ICC C-index:\", ICC_cind)\n"
+    "print(\"ICC C-index:\", ICC_cind)\n",
+    "\n",
+    "\n",
+    "all_cind = concordance_index(np.array(cph_preds['HDFS_Time']), -np.array(cph_preds['Prediction']), np.array(cph_preds['HDFS_Code']))\n",
+    "print(\"\\nAll c-index:\", all_cind)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RSF Predictions\n",
+      "HCC GHCI:  0.6545398420802158\n",
+      "MCRC GHCI:  0.8881659785141696\n",
+      "ICC GHCI:  0.9339280237099136\n",
+      "\n",
+      "HCC C-index: 0.6481481481481481\n",
+      "MCRC C-index: 0.49390243902439024\n",
+      "ICC C-index: 0.62890625\n",
+      "\n",
+      "All c-index: 0.5521262002743484\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"RSF Predictions\")\n",
+    "rsf_preds = pd.read_excel(\"/Data/FeatureSelection/HCC_MCRC_ICC_HDFS_90_10/RSF_test_liver_predictions_90_10_040822.xlsx\")\n",
+    "\n",
+    "HCC_rsf_preds = rsf_preds[rsf_preds['Cancer_Type']==0]\n",
+    "MCRC_rsf_preds = rsf_preds[rsf_preds['Cancer_Type']==1]\n",
+    "ICC_rsf_preds = rsf_preds[rsf_preds['Cancer_Type']==2]\n",
+    "\n",
+    "HCC_ghci = gh_c_index(np.array(HCC_rsf_preds['Prediction']))\n",
+    "MCRC_ghci = gh_c_index(np.array(MCRC_rsf_preds['Prediction']))\n",
+    "ICC_ghci = gh_c_index(np.array(ICC_rsf_preds['Prediction']))\n",
+    "\n",
+    "HCC_cind = concordance_index(np.array(HCC_rsf_preds['HDFS_Time']), np.array(HCC_rsf_preds['Prediction']), np.array(HCC_rsf_preds['HDFS_Code']))\n",
+    "MCRC_cind = concordance_index(np.array(MCRC_rsf_preds['HDFS_Time']), np.array(MCRC_rsf_preds['Prediction']), np.array(MCRC_rsf_preds['HDFS_Code']))\n",
+    "ICC_cind = concordance_index(np.array(ICC_rsf_preds['HDFS_Time']), np.array(ICC_rsf_preds['Prediction']), np.array(ICC_rsf_preds['HDFS_Code']))\n",
+    "\n",
+    "\n",
+    "print(\"HCC GHCI: \", HCC_ghci)\n",
+    "print(\"MCRC GHCI: \", MCRC_ghci)\n",
+    "print(\"ICC GHCI: \", ICC_ghci)\n",
+    "\n",
+    "print(\"\\nHCC C-index:\", HCC_cind)\n",
+    "print(\"MCRC C-index:\", MCRC_cind)\n",
+    "print(\"ICC C-index:\", ICC_cind)\n",
+    "\n",
+    "all_cind = concordance_index(np.array(rsf_preds['HDFS_Time']), np.array(rsf_preds['Prediction']), np.array(rsf_preds['HDFS_Code']))\n",
+    "print(\"\\nAll c-index:\", all_cind)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6844993141289437\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_cind = concordance_index(np.array(cph_preds['HDFS_Time']), -np.array(cph_preds['Prediction']), np.array(cph_preds['HDFS_Code']))\n",
+    "print(all_cind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +328,7 @@
        "      <td>18.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>279.768000</td>\n",
+       "      <td>-0.331360</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -260,7 +336,7 @@
        "      <td>8.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>279.768000</td>\n",
+       "      <td>-0.092027</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -268,7 +344,7 @@
        "      <td>133.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>279.768000</td>\n",
+       "      <td>-0.309715</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -276,7 +352,7 @@
        "      <td>11.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>279.768000</td>\n",
+       "      <td>-0.501277</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -284,7 +360,7 @@
        "      <td>50.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>279.768000</td>\n",
+       "      <td>-0.163785</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -292,7 +368,7 @@
        "      <td>18.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>288.968349</td>\n",
+       "      <td>-0.321827</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -300,7 +376,7 @@
        "      <td>5.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>277.669836</td>\n",
+       "      <td>0.062120</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -308,7 +384,7 @@
        "      <td>15.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>284.356063</td>\n",
+       "      <td>-0.289166</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -316,7 +392,7 @@
        "      <td>120.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>279.768000</td>\n",
+       "      <td>-0.554152</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -324,7 +400,7 @@
        "      <td>98.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>279.768000</td>\n",
+       "      <td>-0.222633</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -332,7 +408,7 @@
        "      <td>30.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>288.968349</td>\n",
+       "      <td>-0.121381</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -340,20 +416,20 @@
       ],
       "text/plain": [
        "    ScoutID  HDFS_Time  HDFS_Code  Cancer_Type  Prediction\n",
-       "0   029-hcc       18.0          0            0  279.768000\n",
-       "1   038-hcc        8.0          0            0  279.768000\n",
-       "2   047-hcc      133.0          0            0  279.768000\n",
-       "3   055-hcc       11.0          0            0  279.768000\n",
-       "4   064-hcc       50.0          0            0  279.768000\n",
-       "5   065-hcc       18.0          1            0  288.968349\n",
-       "6   072-hcc        5.0          1            0  277.669836\n",
-       "7   107-hcc       15.0          1            0  284.356063\n",
-       "8   114-hcc      120.0          0            0  279.768000\n",
-       "9   116-hcc       98.0          0            0  279.768000\n",
-       "10  117-hcc       30.0          1            0  288.968349"
+       "0   029-hcc       18.0          0            0   -0.331360\n",
+       "1   038-hcc        8.0          0            0   -0.092027\n",
+       "2   047-hcc      133.0          0            0   -0.309715\n",
+       "3   055-hcc       11.0          0            0   -0.501277\n",
+       "4   064-hcc       50.0          0            0   -0.163785\n",
+       "5   065-hcc       18.0          1            0   -0.321827\n",
+       "6   072-hcc        5.0          1            0    0.062120\n",
+       "7   107-hcc       15.0          1            0   -0.289166\n",
+       "8   114-hcc      120.0          0            0   -0.554152\n",
+       "9   116-hcc       98.0          0            0   -0.222633\n",
+       "10  117-hcc       30.0          1            0   -0.121381"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
