Using uno_c_statistic function for dl and cph

--- a/data_summary_stuff.ipynb
+++ b/data_summary_stuff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,17 +141,7 @@
     "\n",
     "    cstat = survAUC.UnoC(trainSurv_rsp, testSurv_rsp, R_risk_pred)\n",
     "\n",
-    "    return cstat\n",
-    "\n",
-    "train_cph_time = cph_labels[['HDFS_Time']].to_numpy()\n",
-    "train_cph_event = cph_labels[['HDFS_Code']].to_numpy()\n",
-    "\n",
-    "test_cph_time = cph_preds[['HDFS_Time']].to_numpy()\n",
-    "test_cph_event = cph_preds[['HDFS_Code']].to_numpy()\n",
-    "\n",
-    "all_cph_preds = cph_preds[['Prediction']].to_numpy()\n",
-    "\n",
-    "uno_c_statistic(train_cph_time, train_cph_event, test_cph_time, test_cph_event, all_cph_preds)"
+    "    return cstat"
    ]
   },
   {
@@ -179,28 +169,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CNN Prediction Scores\n",
-      "Total GHCI: 0.6214548079516716\n",
-      "HCC GHCI:  0.6574064009284492\n",
-      "ICC GHCI:  0.6293049311846381\n",
-      "MCRC GHCI:  0.585893117397307\n",
       "\n",
-      "Total c-index: 0.6031671814635344\n",
-      "HCC C-index: 0.605305323126224\n",
-      "ICC C-index: 0.5873654170450123\n",
-      "MCRC C-index: 0.657877862019539\n"
+      "Total c-index: 0.5062893919455292\n",
+      "HCC C-index: 0.4369599322658565\n",
+      "ICC C-index: 0.551803004260801\n",
+      "MCRC C-index: 0.5084942819112813\n"
      ]
     }
    ],
    "source": [
-    "test_preds_0134 = pd.read_csv('/Data/Output/HDFSModel2/Tumor/2022_03_28_1706_train/test_predictions.csv')\n",
+    "test_preds_0134 = pd.read_csv('/Data/Output/HDFSModel2/Liver/2022_05_24_1955_train/test_predictions.csv')\n",
     "ICC_preds_0134 = test_preds_0134[test_preds_0134['Slice_File_Name'].str.contains(\"ICC\")]\n",
     "HCC_preds_0134 = test_preds_0134[test_preds_0134['Slice_File_Name'].str.contains(\"hcc\")]\n",
     "MCRC_preds_0134 = test_preds_0134[test_preds_0134['Slice_File_Name'].str.contains(\"preop\")]\n",
@@ -239,13 +224,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <span>FloatVector with 1 elements.</span>\n",
+       "        <table>\n",
+       "        <tbody>\n",
+       "          <tr>\n",
+       "          \n",
+       "            <td>\n",
+       "                 nan\n",
+       "            </td>\n",
+       "          \n",
+       "          </tr>\n",
+       "        </tbody>\n",
+       "        </table>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<rpy2.robjects.vectors.FloatVector object at 0x7fd3910fb180> [RTYPES.REALSXP]\n",
+       "R classes: ('numeric',)\n",
+       "[     nan]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dl_train_preds = pd.read_csv('/Data/Output/HDFSModel2/Tumor/2022_05_24_1604_train/train_predictions.csv')\n",
+    "\n",
+    "train_dl_time = dl_train_preds[['Time']].to_numpy()\n",
+    "train_dl_event = dl_train_preds[['Event']].to_numpy()\n",
+    "\n",
+    "test_dl_time = dl_train_preds[['Time']].to_numpy()\n",
+    "test_dl_event = dl_train_preds[['Event']].to_numpy()\n",
+    "\n",
+    "all_dl_preds = dl_train_preds[['Prediction']].to_numpy()\n",
+    "\n",
+    "uno_c_statistic(train_dl_time, train_dl_event, test_dl_time, test_dl_event, all_dl_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([173.5])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(train_dl_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ICC_preds_0134.to_csv(\"/Data/tumor_ICC_test_predictions.csv\", index=False)\n",
-    "HCC_preds_0134.to_csv(\"/Data/tumor_HCC_test_predictions.csv\", index=False)\n",
-    "MCRC_preds_0134.to_csv(\"/Data/tumor_MCRC_test_predictions.csv\", index=False)"
+    "ICC_preds_0134.to_csv(\"/Data/Output/HDFSModel2/Liver/2022_05_24_1955_train/liver_ICC_test_predictions.csv\", index=False)\n",
+    "HCC_preds_0134.to_csv(\"/Data/Output/HDFSModel2/Liver/2022_05_24_1955_train/liver_HCC_test_predictions.csv\", index=False)\n",
+    "MCRC_preds_0134.to_csv(\"/Data/Output/HDFSModel2/Liver/2022_05_24_1955_train/liver_MCRC_test_predictions.csv\", index=False)"
    ]
   },
   {
@@ -257,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -266,17 +319,17 @@
      "text": [
       "CPH Predictions\n",
       "\n",
-      "HCC C-index: 0.4772727272727273\n",
-      "ICC C-index: 0.5876288659793815\n",
-      "MCRC C-index: 0.13636363636363635\n",
+      "HCC C-index: 0.375\n",
+      "ICC C-index: 0.5428571428571428\n",
+      "MCRC C-index: 0.35555555555555557\n",
       "\n",
-      "All c-index: 0.5733882030178327\n"
+      "All c-index: 0.6844993141289437\n"
      ]
     }
    ],
    "source": [
     "print(\"CPH Predictions\")\n",
-    "cph_preds = pd.read_excel(\"/Data/FeatureSelection/HCC_MCRC_ICC_HDFS_90_10/CPH_test_liver_predictions.xlsx\")\n",
+    "cph_preds = pd.read_excel(\"/Data/FeatureSelection/HCC_MCRC_ICC_HDFS_90_10/CPH_test_tumor_predictions.xlsx\")\n",
     "\n",
     "HCC_cph_preds = cph_preds[cph_preds['Cancer_Type']==0]\n",
     "MCRC_cph_preds = cph_preds[cph_preds['Cancer_Type']==1]\n",
@@ -306,6 +359,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <span>FloatVector with 1 elements.</span>\n",
+       "        <table>\n",
+       "        <tbody>\n",
+       "          <tr>\n",
+       "          \n",
+       "            <td>\n",
+       "            0.652076\n",
+       "            </td>\n",
+       "          \n",
+       "          </tr>\n",
+       "        </tbody>\n",
+       "        </table>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<rpy2.robjects.vectors.FloatVector object at 0x7ff415e72480> [RTYPES.REALSXP]\n",
+       "R classes: ('numeric',)\n",
+       "[0.652076]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cph_labels = pd.read_excel(\"/Data/Labels/Tumor/HCC_MCRC_ICC_HDFS_tumor_90_10_train.xlsx\")\n",
+    "\n",
+    "train_cph_time = cph_labels[['HDFS_Time']].to_numpy()\n",
+    "train_cph_event = cph_labels[['HDFS_Code']].to_numpy()\n",
+    "\n",
+    "test_cph_time = cph_preds[['HDFS_Time']].to_numpy()\n",
+    "test_cph_event = cph_preds[['HDFS_Code']].to_numpy()\n",
+    "\n",
+    "all_cph_preds = cph_preds[['Prediction']].to_numpy()\n",
+    "\n",
+    "uno_c_statistic(train_cph_time, train_cph_event, test_cph_time, test_cph_event, all_cph_preds)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -314,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -322,9 +423,6 @@
      "output_type": "stream",
      "text": [
       "RSF Predictions\n",
-      "HCC GHCI:  0.8173539707446802\n",
-      "ICC GHCI:  0.654411764705878\n",
-      "MCRC GHCI:  0.4561403508771875\n",
       "\n",
       "HCC C-index: 0.5\n",
       "ICC C-index: 0.57421875\n",
@@ -380,6 +478,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <span>FloatVector with 1 elements.</span>\n",
+       "        <table>\n",
+       "        <tbody>\n",
+       "          <tr>\n",
+       "          \n",
+       "            <td>\n",
+       "            0.376535\n",
+       "            </td>\n",
+       "          \n",
+       "          </tr>\n",
+       "        </tbody>\n",
+       "        </table>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<rpy2.robjects.vectors.FloatVector object at 0x7ff415e0c340> [RTYPES.REALSXP]\n",
+       "R classes: ('numeric',)\n",
+       "[0.376535]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rsf_labels = pd.read_excel(\"/Data/Labels/Tumor/HCC_MCRC_ICC_HDFS_tumor_90_10_train.xlsx\")\n",
+    "\n",
+    "train_rsf_time = rsf_labels[['HDFS_Time']].to_numpy()\n",
+    "train_rsf_event = rsf_labels[['HDFS_Code']].to_numpy()\n",
+    "\n",
+    "test_rsf_time = rsf_preds[['HDFS_Time']].to_numpy()\n",
+    "test_rsf_event = rsf_preds[['HDFS_Code']].to_numpy()\n",
+    "\n",
+    "all_rsf_preds = rsf_preds[['Prediction']].to_numpy()\n",
+    "\n",
+    "uno_c_statistic(train_rsf_time, train_rsf_event, test_rsf_time, test_rsf_event, all_rsf_preds)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -423,42 +569,6 @@
    "source": [
     "test_preds_0134.head(50)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <span>FloatVector with 1 elements.</span>\n",
-       "        <table>\n",
-       "        <tbody>\n",
-       "          <tr>\n",
-       "          \n",
-       "            <td>\n",
-       "            0.579050\n",
-       "            </td>\n",
-       "          \n",
-       "          </tr>\n",
-       "        </tbody>\n",
-       "        </table>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<rpy2.robjects.vectors.FloatVector object at 0x7f0f66d13580> [RTYPES.REALSXP]\n",
-       "R classes: ('numeric',)\n",
-       "[0.579050]"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
