Commenting out R importing
Don't need to import R if not using gh_c_index function

--- a/RandomSurvivalForest/hdfs_random_forest.ipynb
+++ b/RandomSurvivalForest/hdfs_random_forest.ipynb
@@ -37,9 +37,9 @@
    "outputs": [],
    "source": [
     "# Only need to run this once\n",
-    "utils = rpackages.importr('utils')\n",
-    "utils.chooseCRANmirror(ind=1)\n",
-    "utils.install_packages(\"survAUC\")"
+    "# utils = rpackages.importr('utils')\n",
+    "# utils.chooseCRANmirror(ind=1)\n",
+    "# utils.install_packages(\"survAUC\")"
    ]
   },
   {
