--- a/RandomSurvivalForest/hdfs_random_forest.ipynb
+++ b/RandomSurvivalForest/hdfs_random_forest.ipynb
@@ -56,6 +56,8 @@
    "outputs": [],
    "source": [
     "def cox_feature_select(X, t, e):\n",
+    "    # Selecting features based on variance inflation factor and ranking based on hazard ratios\n",
+    "    # Number of features reduced unitl the ratio of features to events is 1:10\n",
     "    num_samples = X.shape[0]\n",
     "    num_events = sum(e)\n",
     "\n",
@@ -89,6 +91,7 @@
    "outputs": [],
    "source": [
     "def calculate_vif(X, thresh=10):\n",
+    "    # Calculate the variance inflation factor of a feature\n",
     "    variables = list(range(X.shape[1]))\n",
     "    dropped=True\n",
     "\n",
@@ -105,8 +108,7 @@
     "    \n",
     "    print('VIF remaining variables:')\n",
     "    print(X.columns[variables])\n",
-    "    return X.iloc[:, variables]\n",
-    "        \n"
+    "    return X.iloc[:, variables]"
    ]
   },
   {
@@ -257,6 +259,7 @@
     "        history['valid_UnoC'].append(val_u_c_stat)\n",
     "        history['valid_IBS'].append(val_ibs)\n",
     "\n",
+    "        # Set best model based on the validation Uno's c statistic value\n",
     "        if best_CI < val_u_c_stat:\n",
     "            best_CI = val_u_c_stat\n",
     "            best_fold = fold\n",
@@ -1678,11 +1681,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "d4d1e4263499bec80672ea0156c357c1ee493ec2b1c70f0acce89fc37c4a6abe"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('base')",
+   "display_name": "Python 3.8.5 ('deepicc')",
    "language": "python",
    "name": "python3"
   },
@@ -1696,9 +1696,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.5"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "231c10b5755f24f797eb0c3c8e63bc4e4867f670e74296d317db1a43eb37d021"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
